fixed some spacing on footer and section 5

--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -227,6 +227,7 @@
     .sectionFour h2 {
         margin: 35px;
     }
+
     .sectionThree .sectionThreeDivOne ul {
         margin-left: 0%;
         margin-top: 35px;
@@ -244,10 +245,15 @@
                 justify-content: center;
                 align-items: center;
                 margin-top: 4%;
+
                 p {
                     text-align: center;
                 }
             }
         }
+    }
+
+    .empty {
+        height: 40px;
     }
 }
