--- a/styles/_sectionFive.scss
+++ b/styles/_sectionFive.scss
@@ -126,6 +126,8 @@
     .sectionFive .dropUsALine {
         h2 {
             text-align: center;
+            margin-left: 1%;
+            margin-right: 1%;
         }
         p {
             width: 85%;
